<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botonNombre"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/botonNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/botonEspecie"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/botonEspecie"
        app:layout_constraintEnd_toEndOf="@+id/botonNombre"
        app:layout_constraintStart_toStartOf="@+id/botonNombre"
        app:layout_constraintTop_toBottomOf="@+id/botonSexo" />

    <Button
        android:id="@+id/botonProfesion"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/botonProfesion"
        app:layout_constraintEnd_toEndOf="@+id/botonNombre"
        app:layout_constraintStart_toStartOf="@+id/botonNombre"
        app:layout_constraintTop_toBottomOf="@+id/botonEspecie" />

    <Button
        android:id="@+id/botonSexo"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/botonSexo"
        app:layout_constraintEnd_toEndOf="@+id/botonNombre"
        app:layout_constraintStart_toStartOf="@+id/botonNombre"
        app:layout_constraintTop_toBottomOf="@+id/botonNombre" />

    <Button
        android:id="@+id/botonAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonAvatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonProfesion"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/textViewN"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/botonNombre"
        app:layout_constraintStart_toEndOf="@+id/botonNombre"
        app:layout_constraintTop_toTopOf="@+id/botonNombre"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewE"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/botonEspecie"
        app:layout_constraintStart_toEndOf="@+id/botonEspecie"
        app:layout_constraintTop_toTopOf="@+id/botonEspecie"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewS"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/botonSexo"
        app:layout_constraintStart_toEndOf="@+id/botonSexo"
        app:layout_constraintTop_toTopOf="@+id/botonSexo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewP"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/botonProfesion"
        app:layout_constraintStart_toEndOf="@+id/botonProfesion"
        app:layout_constraintTop_toTopOf="@+id/botonProfesion"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/contenedorFragmento"
        android:layout_width="410dp"
        android:layout_height="649dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcerca"
        app:layout_constraintVertical_bias="0.755">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>